fix(Dialogs): Corners stick out of container
In desktop version sharp corners overlap container's rounded ones.

--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -37,10 +37,12 @@
 @media (min-width: 769px) {
   .dialogsList {
     transition: none;
-
+    
     flex-basis: 30%;
     height: 100%;
     position: static;
+
+    background: none;
   }
 }
 
